<?xml version="1.0"?>
<package format="3">
  <name>luci_transforms</name>
  <version>1.1.0</version>
  <description>The luci_sensors_tf package is responsible for brodcasting the chair specific Luci sensors positions</description>

  <maintainer email="christian@luci.com">Christian</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
