# Copyright 2025 LUCI Mobility, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.8)

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)

add_executable(luci_dev_kit_tf_node src/tf_broadcaster.cpp)
ament_target_dependencies(luci_dev_kit_tf_node "tf2_ros" "rclcpp" "geometry_msgs")

install(TARGETS
luci_dev_kit_tf_node
    DESTINATION lib/${PROJECT_NAME}
)
